# codex

./: CMakeLists.txt  README.md  codex.cc  mock.proto  mock_writer.cc
gtest/: CMakeLists.txt
